Error pages: make sure there are links on error pages to go back to home (currently users are stuck and have to close the page)

--- a/magi/static/less/main.less
+++ b/magi/static/less/main.less
@@ -2241,6 +2241,9 @@ nav {
 
     .navbar-main {
         .navbar-variant(@mainColor, white);
+        .navbar-toggle.collapsed .flaticon-home {
+            color: white;
+        }
     }
 
     .navbar .navbar-nav > li > a {
